--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
-  <title>Document</title>
+  <title>Maratona Explorer</title>
 </head>
 
 <body>
@@ -17,8 +17,14 @@
       alt="imagem de uma bola de cristal" />
     <h1>Vou revelar o seu destino!</h1>
     <p>Clique em fazer pergunta para que seu destino seja revelado.</p>
-    <input type="text" placeholder="Digite sua pergunta" />
-    <button>Fazer pergunta</button>
+    <input id="inputPergunta" type="text" placeholder="Digite sua pergunta" />
+
+    <button id="buttonPerguntar" onclick="fazerPergunta()">Fazer pergunta</button>
+
+    <h3 id="resposta">
+    </div>
+      
+    </h3>
 
   </div>
   <script src="./main.js"></script>
